fix a bug in hello_world2 script

--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -13,4 +13,4 @@ jobs:
     steps:
       - run: echo "hello world"
       - shell: bash
-        run: cicd/hello_world2.sh
+        run: ./cicd/hello_world2.sh
