--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -12,5 +12,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "hello world"
-      - shell: bash
-        run: ../../cicd/hello_world2.sh
+      - run: pwd
