fix the same bug

--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - run: echo "hello world"
       - run: pwd
-  hello-world:
+  hello-world2:
     runs-on: ubuntu-latest
     steps:
       - run: echo "hello world2"
