fix the same bug

--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -11,7 +11,9 @@ jobs:
   hello-world:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "hello world"
+      - run: |
+        echo "hello world" 
+        ls
       - run: pwd
   hello-world2:
     runs-on: ubuntu-latest
