fix the same bug

--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -11,8 +11,9 @@ jobs:
   hello-world:
     runs-on: ubuntu-latest
     steps:
-      - run: ls
-      - run: pwd
+      - run: |
+        ls
+        pwd
   hello-world2:
     runs-on: ubuntu-latest
     steps:
