--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          ls
+          echo "hello world\n"
           pwd
   hello-world2:
     runs-on: ubuntu-latest
