--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -8,3 +8,12 @@ jobs:
       - run: echo "hello world2"
       - name: most important step
         run: bash ./cicd/hello_world2.sh
+  hello-world-2:
+    runs-on: ubuntu-latest
+    steps:
+      - shell: python
+        run: |
+          x = 1 + 3
+          y = x*x
+          print(x)
+      - run: echo "hello from job 2"
