--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -7,11 +7,13 @@ jobs:
       - uses: actions/checkout@v2
       - run: echo "hello world2"
       - name: most important step
-        run: bash ./cicd/hello_world2.sh
+        shell: bash
+        run: ./cicd/hello_world2.sh
   hello-world-2:
     runs-on: ubuntu-latest
     steps:
-      - shell: python
+      - name: python test
+        shell: python
         run: |
           x = 1 + 3
           y = x*x
