--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -16,5 +16,6 @@ jobs:
         run: |
           x = 1 + 3
           y = x*x
-          print(x)
+          print(f"{x} and {y}\n")
+          print(x*x*x)
       - run: echo "hello from job 2"
