GP-edit tag to github_sha

--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -42,5 +42,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.GITHUB_SHA }}
+          tags: $GITHUB_SHA
           labels: ${{ steps.meta.outputs.labels }}
