--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -42,5 +42,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: $GITHUB_SHA
+          tags: ${{ github.sha }}
           labels: ${{ steps.meta.outputs.labels }}
